--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.3"
+    "@astrojs/react": "^2.2.1",
+    "@astrojs/svelte": "^3.1.0",
+    "@astrojs/vue": "^2.2.1",
+    "@nanostores/react": "^0.7.1",
+    "@types/react": "^18.2.19",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^2.10.3",
+    "nanostores": "^0.9.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "svelte": "^4.1.2",
+    "vue": "^3.3.4"
   }
 }
